# TestCoCa

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  README.md  build.py  compile_commands.json  create_executable.sh  smoketest.sh
benchmarks/: args.json  benman.py  change_benchmarks_args.py  create_executable.sh  out.txt  rename_tests.py
benchmarks/cover_branches/bit_and_simple/: bit_and_simple.c  bit_and_simple.json
benchmarks/cover_branches/bit_and_simple/test-suite/: bit_and_simple_test_2.xml
benchmarks/cover_branches/bit_shift_or_deep/: bit_shift_or_deep.c  bit_shift_or_deep.json
benchmarks/cover_branches/bit_shift_or_deep/test-suite/: bit_shift_or_deep_test_1.xml  bit_shift_or_deep_test_2.xml  bit_shift_or_deep_test_3.xml  bit_shift_or_deep_test_4.xml  metadata.xml
benchmarks/cover_branches/bool_flag_one_and_two/: bool_flag_one_and_two.json
benchmarks/cover_branches/bool_flag_one_and_two/test-suite/: bool_flag_one_and_two_test_1.xml  bool_flag_one_and_two_test_4.xml  test_3.xml
benchmarks/cover_branches/c_string_count_chars/test-suite/: c_string_count_chars_test_4.xml  test_2.xml  test_6.xml  test_7.xml
benchmarks/cover_branches/c_string_parse_two_ints/test-suite/: c_string_parse_two_ints_test_13.xml  c_string_parse_two_ints_test_8.xml  metadata.xml  test_10.xml  test_12.xml  test_14.xml  test_17.xml  test_3.xml  test_6.xml  test_9.xml
benchmarks/cover_branches/call_bool_arg/test-suite/: metadata.xml  test_2.xml
benchmarks/cover_branches/chain_lind_01/test-suite/: chain_lind_01_test_2.xml  chain_lind_01_test_4.xml  test_1.xml  test_3.xml
benchmarks/cover_branches/chain_lind_02/test-suite/: test_3.xml  test_4.xml
benchmarks/cover_branches/chain_lind_05/test-suite/: chain_lind_05_test_2.xml  test_3.xml  test_4.xml
benchmarks/cover_branches/dont_stop_early/: dont_stop_early.c
benchmarks/cover_branches/dont_stop_early/test-suite/: dont_stop_early_test_2.xml  dont_stop_early_test_3.xml  metadata.xml
benchmarks/cover_branches/ex2-alloca/test-suite/: ex2-alloca_test_1.xml  ex2-alloca_test_4.xml  metadata.xml  test_5.xml
benchmarks/cover_branches/float_if_deg_to_rad/test-suite/: metadata.xml  test_1.xml
benchmarks/cover_branches/float_if_deg_to_rad_inline/test-suite/: float_if_deg_to_rad_inline_test_2.xml
benchmarks/cover_branches/float_if_parabola/test-suite/: metadata.xml
benchmarks/cover_branches/float_if_parabola2/test-suite/: metadata.xml
benchmarks/cover_branches/float_if_x_eq_c/test-suite/: metadata.xml  (+1 more)
benchmarks/cover_branches/impossible_condition/: impossible_condition.c  impossible_condition.json
benchmarks/cover_branches/infinite01/: infinite01.json
benchmarks/cover_branches/infinite_loop/: infinite_loop.c
benchmarks/cover_branches/int128/: int128.c
benchmarks/cover_branches/no_tests/: no_tests.json
benchmarks/cover_branches/uint128/: uint128.c
benchmarks/cover_branches/uint16_if_parabola/: uint16_if_parabola.json
benchmarks/cover_branches_testcomp/benchmark25_linear/: benchmark25_linear.c  benchmark25_linear.json
benchmarks/cover_branches_testcomp/no_tests/: no_tests.json
benchmarks/cover_branches_testcomp/nondet_memory/: nondet_memory.c  nondet_memory.json
benchmarks/cover_branches_testcomp/short_circuit_evaluation/: short_circuit_evaluation.c  short_circuit_evaluation.json
benchmarks/cover_branches_testcomp/unreachable_bb/: unreachable_bb.c  unreachable_bb.json
benchmarks/cover_error/float_special_values/: float_special_values.c  float_special_values.json
benchmarks/cover_error/fuzzle/: fuzzle.c  fuzzle.json
benchmarks/cover_error/infinite_loop/: infinite_loop.c
benchmarks/cover_error/nested_ifs/: nested_ifs.c
benchmarks/cover_error/ternary_operator/: ternary_operator.c  ternary_operator.json
benchmarks/cover_error/unreachable/: unreachable.c  unreachable.json
benchmarks/fast/bit_and_simple/: bit_and_simple.c  bit_and_simple.ll  bit_and_simple_instr.ll  bit_and_simple_instr.out  result.json
benchmarks/fast/bool_flag_one_and_two/: bool_flag_one_and_two.ll  bool_flag_one_and_two_instr.ll  bool_flag_one_and_two_instr.out  result.json
benchmarks/fast/impossible_condition/: impossible_condition.json
benchmarks/fast/int32_if_x_ge_c/: int32_if_x_ge_c.json
benchmarks/fast/int8_if_x_equal_c_test_suite/: int8_if_x_equal_y_c_test_1.xml  int8_if_x_equal_y_c_test_2.xml  metadata.xml
benchmarks/property/: coverage-VERIFIER_error.prp  coverage-reach_error.prp
example/: smoketest.sh
include/connection/: shared_memory.hpp
setup/VSCode/: launch.json
src/: CMakeLists.txt
src/client/: CMakeLists.txt
src/client/src/: run.cpp
src/connection/: CMakeLists.txt
src/connection/include/connection/: client.hpp  connection.hpp  message.hpp  shared_memory.hpp  target_executor.hpp
src/connection/src/: executor.cpp  message.cpp  shared_memory.cpp  target_executor.cpp
src/driver/: CMakeLists.txt
src/driver/include/driver/: program_options.hpp  run_analyzer.h  run_analyzer.hpp  test_parser.hpp
src/driver/src/: main.cpp  program_info.cpp  program_options.cpp  run.cpp  run_analyzer.cpp  test_parser.cpp
src/instrumentation/: CMakeLists.txt
src/instrumentation/include/instrumentation/: data_record_id.hpp  instrumentation_types.hpp  target.hpp  target_termination.hpp
src/instrumentation/src/: instrumentation.cpp  instrumentation_types.cpp  main.cpp  target.cpp  verifier_functions.cpp
src/instrumenter/: CMakeLists.txt
src/instrumenter/include/instrumenter/: llvm_instrumenter.hpp  program_info.hpp
src/instrumenter/src/: llvm_instrumenter.cpp  main.cpp  program_info.cpp  program_options.cpp  run.cpp
src/iomodels/: CMakeLists.txt
src/iomodels/include/iomodels/: configuration.hpp  input_model.hpp  iomanager.hpp  stdin_base.hpp  stdin_replay_bytes_then_raise_error.hpp  stdout_base.hpp  stdout_void.hpp
src/iomodels/src/: configuration.cpp  input_model.cpp  iomanager.cpp  models_map.cpp  stdin_replay_bytes_then_raise_error.cpp  stdout_void.cpp
src/runner/: CMakeLists.txt  TestCoCa.py  testCoCa.py
src/server/: CMakeLists.txt
src/server/src/: program_options.cpp  run.cpp
(+158 files in other folders)
